--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,10 @@
-index.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>immedia</title>
+  </head>
+  <body>
+    <div id='container'></div>
+  </body>
+</html>
