--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>immedia</title>
-  </head>
-  <body>
-    <div id='container'></div>
-  </body>
-</html>
+index.html
