--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id='container'></div>
-    <script src='./build/build.min.js'></script>
+    <script src='./src/build.js'></script>
   </body>
 </html>
