--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id='container'></div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
     <script src='./src/build.js'></script>
   </body>
 </html>
