--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>immedia</title>
+    <style>
+
+    #preview {
+      width: 500px;
+      height: 600px;
+      border-style: solid;
+      border-color: gray;
+      border-width: 1px;
+      border-radius: 10px;
+    }
+
+    </style>
   </head>
   <body>
     <div id='container'></div>
