--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
+    <script src='https://www.youtube.com/iframe_api'></script> 
     <script src='./src/build.js'></script>
   </body>
 </html>
