[update] add styling to the client mainly results

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
       border-color: gray;
       border-width: 1px;
       border-radius: 10px;
+      float: right;
+      margin-right: 40px;
     }
 
     </style>
