--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>immedia</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <style>
+
 
     #preview {
       width: 500px;
@@ -15,8 +17,9 @@
       float: right;
       margin-right: 40px;
     }
-
+    
     </style>
+    
   </head>
   <body>
     <div id='container'></div>
@@ -24,5 +27,19 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
     <script src='./src/build.js'></script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+    <script>
+      $(function() {
+        var availableTags = [
+          'trump', 'trumpa', 'trumpy', 'big daddy trump', 'dj trump', 'just trump it'
+        ];
+        $( "#tags" ).autocomplete({
+          source: availableTags
+        });
+      });
+    </script>
+
   </body>
 </html>
