[fix] css inconsistency issue

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,21 @@
     <title>immedia</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">    
   </head>
+  <style>
+    #preview {
+      width: 500px;
+      height: 550px;
+      border-style: solid;
+      border-color: gray;
+      border-width: 10px;
+      border-radius: 20px;
+      margin-right: 40px;
+      position: fixed;
+      left: 400px;
+      margin-top: 100px;
+    }
+  
+  </style>
   <body>
     <div id='container'></div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js'></script>
