--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     
   </head>
   <body>
-    <div id='container'></div>
+    <div id='container' style={{backgroundColor: '#46008B'}}></div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
