[fix] made autocomplete feat working

--- a/client/index.html
+++ b/client/index.html
@@ -51,15 +51,13 @@
                 'search': request.term
               },
               success: function( data ) {
-                response( data[1] );
+                response(data[1]);
               }
             });
           },
           minLength: 3,
           select: function( event, ui ) {
-            log( ui.item ?
-              "Selected: " + ui.item.label :
-              "Nothing selected, input was " + this.value);
+            console.log( ui.item ? "Selected: " + ui.item.label : "Nothing selected, input was " + this.value);
           },
           open: function() {
             $( this ).removeClass( "ui-corner-all" ).addClass( "ui-corner-top" );
