[update] wikiview displays summary for some queries,not for others

--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
         width: 480px;
       }
 
-      .tweet {
+      #tweet {
         margin-left: 20px;
       }
     
@@ -57,6 +57,7 @@
     <script src='https://www.youtube.com/iframe_api'></script> 
     <script src='./src/build.js'></script>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src='https://platform.twitter.com/widgets.js'></script>
       <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
       $(function() {
