[update] twitter previews smoothly

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <style>
       #preview {
-        width: 500px;
+        width: 35%;
         height: 600px;
         border-style: solid;
         border-color: gray;
@@ -14,8 +14,9 @@
         border-left-width: 0px;
         border-radius: 20px;
         /*margin-right: 40px;*/
-        position: fixed;
-        left: 400px;
+        position: relative;
+        /*left: 400px;*/
+        float: left;
         margin-top: 50px;
       }
 
@@ -27,7 +28,7 @@
       }
 
       #wikiview {
-        width: 500px;
+        /*width: 500px;*/
         height: 700px;
         border-style: solid;
         border-color: gray;
@@ -36,7 +37,7 @@
       }
 
       #twitterPreview {
-        width: 480px;
+        width: 95%;
       }
 
       #tweet {
