--- a/client/index.html
+++ b/client/index.html
@@ -6,38 +6,38 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <style>
       #preview {
-        width: 35%;
+        width: 500px;
         height: 600px;
         border-style: solid;
         border-color: gray;
         border-width: 1px;
-        border-left-width: 0px;
+        border-left-width: 1px;
         border-radius: 20px;
         /*margin-right: 40px;*/
-        position: relative;
-        /*left: 400px;*/
-        float: left;
+        position: fixed;
+        left: 400px;
         margin-top: 50px;
       }
 
       #d3container {
-        border-style: solid;
+/*        border-style: solid;
         border-color: gray;
         border-width: 1px;
-        border-radius: 20px;
+        border-radius: 20px;*/
       }
 
       #wikiview {
-        /*width: 500px;*/
+        width: 500px;
         height: 700px;
         border-style: solid;
         border-color: gray;
         border-width: 1px;
         border-radius: 20px;
+        left: 650px;
       }
 
       #twitterPreview {
-        width: 95%;
+        width: 480px;
       }
 
       #tweet {
@@ -56,7 +56,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
     <script src='https://www.youtube.com/iframe_api'></script> 
-    <script src='./build/build.min.js'></script>
+    <script src='./src/build.js'></script>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script>
