--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,14 @@
     <title>immedia</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+
       #preview {
         width: 500px;
         height: 600px;
-        border-style: solid;
-        border-color: gray;
-        border-width: 1px;
-        border-left-width: 1px;
-        border-radius: 20px;
-        /*margin-right: 40px;*/
         position: fixed;
         float: left;
         left: 400px;
@@ -30,45 +29,6 @@
         position: fixed;
         left: 1425px;
         margin-top: 90px;
-      }
-
-      #d3container {
-/*        border-style: solid;
-        border-color: gray;
-        border-width: 1px;
-        border-radius: 20px;*/
-      }
-
-      #wikiview {
-        width: 500px;
-        height: 500px;
-        border-style: solid;
-        border-color: gray;
-        border-width: 1px;
-        border-radius: 20px;
-        /*left: 650px;*/
-        float: right;
-      }
-
-      .wikiLink {
-        color: blue;
-        cursor: pointer;
-      }
-
-      #twitterPreview {
-        width: 480px;
-      }
-
-      #d3container {
-        float: left;
-      }
-
-      #tweet {
-        margin-left: 20px;
-      }
-
-      #slider {
-        width: 350px;
       }
     
       .ui-autocomplete-loading {
