--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>immedia</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="shortcut icon" href="./immedia.ico" />
     <style>
       body {
         padding: 0;
