[fix] (client) add back jQuery 1.10 CDN required for search autofill

--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,7 @@
         left: 1425px;
         margin-top: 90px;
       }
-    
-      .ui-autocomplete-loading {
-        background: white url("images/ui-anim_basic_16x16.gif") right center no-repeat;
-      }
+
       #city { width: 25em; }
     </style>
   </head>
@@ -36,7 +33,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
     <script src='https://www.youtube.com/iframe_api'></script> 
     <script src='./build/build.min.js'></script>
-    <!-- // <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   </body>
 </html>
