[style] (client) change font from a default Apple one to a Google CDN

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <title>immedia</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="shortcut icon" href="./immedia.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
     <style>
       body {
         padding: 0;
