--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,43 @@
     <meta charset="utf-8">
     <title>immedia</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./styles.css"> -->
     <link rel="shortcut icon" href="./immedia.ico" />
-    <link href='https://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Nunito:300,700' rel='stylesheet' type='text/css'>
     <style>
       body {
         padding: 0;
         margin: 0;
+      }
+
+      #wikiview tbody:first-child th {
+        font-family: 'Nunito';
+        font-size: 18px;
+        background-color: rgba(128, 128, 128, 0.1);
+        font-weight: bold;
+      }
+
+      #wikiview caption {
+        font-family: 'Nunito';
+        font-size: 18px;
+        background-color: rgba(128, 128, 128, 0.1);
+        font-weight: bold;
+      }
+
+      #wikiview tbody tr th {
+        font-family: 'Nunito';
+        font-weight: bold;
+        text-align: left;
+        padding-right: 2px;
+        font-size: 14px;
+        background-color: rgba(128, 128, 128, 0.1);
+      }
+
+      #wikiview tbody tr td {
+        font-family: 'Nunito';
+        text-align: left;
+        padding-left: 2px;
+        font-size: 14px;
       }
     </style>
   </head>
