[refactor] (client) convert Wikipedia content to React components and switch from infobox to first paragraph summary

--- a/client/index.html
+++ b/client/index.html
@@ -13,34 +13,9 @@
         margin: 0;
       }
 
-      #wikiview tbody:first-child th {
-        font-family: 'Nunito';
-        font-size: 18px;
-        background-color: rgba(128, 128, 128, 0.1);
-        font-weight: bold;
-      }
-
-      #wikiview caption {
-        font-family: 'Nunito';
-        font-size: 18px;
-        background-color: rgba(128, 128, 128, 0.1);
-        font-weight: bold;
-      }
-
-      #wikiview tbody tr th {
-        font-family: 'Nunito';
-        font-weight: bold;
-        text-align: left;
-        padding-right: 2px;
-        font-size: 14px;
-        background-color: rgba(128, 128, 128, 0.1);
-      }
-
-      #wikiview tbody tr td {
-        font-family: 'Nunito';
-        text-align: left;
-        padding-left: 2px;
-        font-size: 14px;
+      .wikiLink {
+        color: blue;
+        text-decoration: underline;
       }
     </style>
   </head>
