--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'></script>
     <script src='https://www.youtube.com/iframe_api'></script> 
     <script src='./build/build.min.js'></script>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
