--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
       ::-webkit-scrollbar {
           -webkit-appearance: none;
           width: 7px;
+          height: 7px;
       }
 
       ::-webkit-scrollbar-thumb {
@@ -22,6 +23,13 @@
       body {
         padding: 0;
         margin: 0;
+      }
+
+      #youtube {
+        top: 50px;
+        left: 0px;
+        position: absolute;
+        overflow: scroll;
       }
 
       .wikiLink {
